libs/config/tests/errors/ce6_expected_array/stdout.ansi
[0m[1m[38;5;9merror[CE6][0m[1m: property was expected to be an array[0m
  [0m[34m┌─[0m source.hpp:1:1
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m [0m[31mnot_array[][0m = "hello";
  [0m[34m│[0m [0m[31m^^^^^^^^^^^[0m   [0m[34m-------[0m [0m[34mnot an array[0m
  [0m[34m│[0m [0m[31m│[0m              
  [0m[34m│[0m [0m[31mexpects an array[0m
  [0m[34m│[0m
  [0m[34m=[0m [33mhelp[0m: remove the [] from the property
  [0m[34m=[0m [32mtry[0m: not_array

